# st_25

./: .gitignore
bc_car/: bc.py  drive.py  main.py  nvidia_elu_3_dropout.h5  pyproject.toml
bc_car/DataForCar/: driving_log.csv
german_traffic_signes_cnn/: german_ts_cnn.py
polynomial_regression/: main.py  pr.py  pyproject.toml
